1.3.7 (20.01.2016):

* Fixed check that pages have been saved
* Fixed scan->rotate->unpaper->OCR chaining (again). Closes bug #213
  (Cant call method freeze on an undefined value)
* Filter out memory address from unpaper warning. Closes bug #205
  (Gscan2pdf problem with unpaper 6.2) and Debian bug #807565
  (Unpaper error dialog cannot be hidden permanently)
* Ensure that process numbering is properly reinitialised when queue is empty.


1.3.6 (20.12.2015):

* Use simplified tesseract call for tesseract >= 3.02.02. Closes patch #15
  (Simplifying Tesseract call in Tesseract.pm). Thanks to Wikinaut for the patch
* Add completion for author, title, subject & keyword metadata
* Store the list of pages to be saved on hitting the save button, not waiting to
  choose the filename. Closes Debian bug #648627
  (post-dialog selection changes influence which pages are saved)
* Fixed progress text when importing files with multiple pages
* Some scanners activate paper-width and paper-height only for the ADF, and thus
  send "invalid argument" when setting the paper size for the flatbed. Trap this
  by also testing whether these options are active when setting the paper size.
* When scanning "all" pages, but only a finite number are possible, report this
  in the progress bar.
* Update list of available paper sizes after every option reload, as different
  sources (e.g. flatbed, ADF) support different geometries
* Update list of rpm dependencies in .spec files (Closes support-requests #15)
* Update to Danish translation (thanks to Aputsiaĸ Niels Janussen)
* Update to French translation (thanks to Jean-Marc)
* Update to Hebrew translation (thanks to Lior David)


1.3.5 (07.10.2015):

* Add prepend and append to PDF save options.
* Use new threading philosophy for scanning thread.
* Fix bug applying profiles with duplicated or invalid options
* Selecting single-sided pages also selects facing page. Closes bug #206