@@ -1,8 +1,9 @@
 1.3.7 (20.01.2016):
 
 * Fixed check that pages have been saved
-* Fixed scan->rotate->unpaper->OCR chaining (again). Closes bug #213
-  (Cant call method freeze on an undefined value)
+* Fixed scan->rotate->unpaper->OCR chaining (again). Closes:
+   bug #213 (Cant call method freeze on an undefined value)
+   bug #215 (thanks to Alastair for testing)
 * Filter out memory address from unpaper warning. Closes bug #205
   (Gscan2pdf problem with unpaper 6.2) and Debian bug #807565
   (Unpaper error dialog cannot be hidden permanently)
